# paleomix

./: .codespell-ignore  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGES.md  INSTALL.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  __init__.py  atomiccmd.py  atomicset.py  examples  fileutils.py  index.html  main.py  node.py  nodegraph.py  noxfile.py  paleomix_environment.yaml  params.json  pipeline.py  project.org  pylint.conf  pypeline.py  pyproject.toml  setup.cfg  setup.py  taskgraph.py  tox.ini  ui.py
.github/workflows/: lints.yaml  pre-commit.yaml  tests.yaml
common/: fileutils.py  samwrap.py  sequences.py  text.py  utilities.py  vcfwrap.py
common/formats/: fasta.py  msa.py  phylip.py
docs/: Makefile  acknowledgements.rst  conf.py  examples.rst  index.rst  installation.rst  introduction.rst  other_tools.rst  references.rst  related.rst  release.rst  yaml.rst
docs/bam_pipeline/: configuration.rst  filestructure.rst  index.rst  makefile.rst  makefile.yaml  overview.rst  requirements.rst  usage.rst
docs/phylo_pipeline/: configuration.rst  filestructure.rst  index.rst  makefile.rst  overview.rst  requirements.rst  usage.rst
docs/troubleshooting/: bam_pipeline.rst  common.rst  index.rst  install.rst  phylo_pipeline.rst  zonkey_pipeline.rst
docs/zonkey_pipeline/: configuration.rst  filestructure.rst  index.rst  makefile.rst  overview.rst  panel.rst  requirements.rst  usage.rst
example/: .gitignore  main.py
examples/bam_pipeline/: 000_makefile  000_makefile.yaml
examples/bam_pipeline/000_data/: GCTCTG_L2.bam
examples/bam_pipeline/000_prefixes/: rCRS.dict
examples/nature_protocols/alignment/: 000_makefile.yaml
examples/nature_protocols/phylogeny/: 000_makefile.yaml  select_highly_covered_genes.py  summarize_heterozygosity.py
examples/nature_protocols/profiling/: build_all_profiles.sh  build_profile.sh
misc/: setup_bam_pipeline_example.makefile.yaml  setup_bam_pipeline_example.sh  setup_phylo_pipeline_example.sh  skeleton.py  synthesize_reads.py
nodes/: adapterremoval.py  bam_statistics.py  bedtools.py  bwa.py  coverage.py  filesystem.py  formats.py  gatk.py  mafft.py  modeltest.py  muscle.py  picard.py  raxml.py  samtools.py  sequences.py  validation.py
paleomix/: __init__.py  __main__.py  config.py  logger.py  main.py  node.py  nodegraph.py  pipeline.py  ui.py  yaml.py
paleomix/atomiccmd/: __init__.py  builder.py  command.py  command2.py  pprint.py  sets.py
paleomix/common/: argparse.py  bamfiles.py  bedtools.py  command.py  console.py  fileutils.py  layout.py  logging.py  makefile.py  procs.py  resources.py  rtools.py  sampling.py  sequences.py  signals.py  system.py  testing.py  text.py  timer.py  utilities.py  vcffilter.py  vcfwrap.py  versions.py  yaml.py
paleomix/core/: input.py  reports.py  workers.py
paleomix/nodes/: __init__.py  adapterremoval.py  bedtools.py  bowtie2.py  bwa.py  commands.py  examl.py  fastp.py  fastqc.py  formats.py  gatk.py  mafft.py  mapdamage.py  misc.py  multiqc.py  newick.py  phylip.py  picard.py  raxml.py  samtools.py  sequences.py  validation.py
paleomix/resources/: __init__.py
paleomix/tools/: bedtools.py  build_mito.py  cat.py  cleanup.py  coverage.py  depths.py  dupcheck.py  duphist.py  ena.py  factory.py  genotype.py  gtf_to_bed.py  retable.py  rmdup_collapsed.py  rscript.py  sample_pileup.py  validate_fasta.py  validate_fastq.py  vcf_filter.py  vcf_to_fasta.py  worker.py  zip.py
paleomix/yaml/: __init__.py
patches/: AdapterRemoval-1.3-GG1.patch  AdapterRemoval-1.3-GG2.patch
pylib/: sequences.py  utilities.py  vcfwrap.py
pylint_plugins/: create_customizable_cli_parameters.py  newick_properties.py  nose_tools_asserts.py
pypeline/: __init__.py  atomiccmd.py  atomicparams.py  atomicpp.py  atomicset.py  config.py  logger.py  main.py  node.py  nodegraph.py  pipeline.py  requirements.py  ui.py  version.py
pypeline/atomiccmd/: builder.py  command.py  pprint.py  sets.py
pypeline/commands/: sam_to_bam.py
pypeline/common/: bamfiles.py  bedtools.py  console.py  fileutils.py  makefile.py  procs.py  sampling.py  sequences.py  signals.py  system.py  testing.py  text.py  timer.py  utilities.py  vcffilter.py  vcfwrap.py  versions.py
pypeline/nodes/: adapterremoval.py  bedtools.py  bowtie2.py  bwa.py  coverage.py  depthhist.py  duphist.py  examl.py  formats.py  gatk.py  mafft.py  mapdamage.py  misc.py  modeltest.py  muscle.py  newick.py  paleomix.py  phylip.py  picard.py  raxml.py  samtools.py  sequences.py  statistics.py  validation.py
pypeline/pylint/: create_customizable_cli_parameters.py
pypeline/tools/: cat.py  cleanup.py  coverage.py  create_pileup.py  depths.py  duphist.py  factory.py  genotype.py  gtf_to_bed.py  rmdup_collapsed.py  sample_pileup.py  vcf_filter.py  vcf_to_fasta.py  zip.py
pypeline/yaml/: __init__.py
src/paleomix/: __init__.py  __main__.py  node.py  nodegraph.py  pipeline.py
tests/: .coveragerc  README.md  atomicset_test.py  misc_test.py  node_test.py  nodegraph_test.py  ruff.toml  run  run.sh  setup.sh
tests/atomiccmd_test/: builder_test.py  command2_test.py  command_test.py  pprint_test.py  sets_test.py
tests/bwa/: README  run.sh
tests/common/: utils.py
tests/common_tests/: __init__.py  bedtools_test.py  bedtools_tests.py  fileutils_test.py  layout_test.py  makefile_test.py  procs_test.py  sampling_test.py  sampling_tests.py  sequences_test.py  signals_test.py  text_test.py  text_tests.py  utilities_test.py  versions_test.py  versions_tests.py
tests/data/: fasta_file.fasta  fasta_file.fasta.bz2  rCRS.fasta.fai  simple.yaml
tests/function/: adapterremoval_test.py  bowtie2_test.py  bwa_test.py  framework.py  picard_test.py  run
tests/nodes/: bowtie2_test.py  bwa_test.py
tests/tools_test/: factory_test.py  validate_fasta_test.py
tests/unit/: atomiccmd_test.py  atomicpp_test.py  atomicset_test.py  node_test.py  run
tools/: alignment.py  alignment_mkfile.py  coverage.py  sam_to_bam.py  unicat.py
tools/alignment_common/: paths.py  summary.py
typings/: coloredlogs.pyi  configargparse.pyi
typings/humanfriendly/: terminal.pyi
(+519 files in other folders)
