[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paleomix"
dynamic = ["version"]

authors = [{ name = "Mikkel Schubert", email = "MikkelSch@gmail.com" }]
license = { file = "LICENSE" }
description = "Bioinformatics pipelines for HTS data"
readme = { file = "README.rst", content-type = "text/x-rst" }

requires-python = ">=3.8"
dependencies = [
    "coloredlogs>=10.0",
    "configargparse>=0.13.0",
    "pysam>=0.10.0",
    "ruamel.yaml>=0.16.0",
    "setproctitle>=1.1.0",
]

keywords = ["pipeline", "bioinformatics", "hts", "bam"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/MikkelSchubert/paleomix"
Documentation = "https://paleomix.readthedocs.io"
Repository = "https://github.com/MikkelSchubert/paleomix.git"
Issues = "https://github.com/MikkelSchubert/paleomix/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
paleomix = "paleomix.main:entry_point"

[tool.hatch.version]
path = "paleomix/__init__.py"

[tool.coverage.run]
branch = true

[tool.coverage.report]
skip_covered = true
show_missing = true
precision = 1

exclude_also = [
    # Exclude code-blocks that are only used during (pyright) type-checking
    "^if TYPE_CHECKING:",
]

[tool.coverage.xml]
output = "cov.xml"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
markers = ["slow"]

[tool.ruff]
target-version = "py38"
output-format = "concise"

exclude = ["docs/**"]

[tool.uv]
reinstall-package = ["paleomix"]
