[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "paleomix"
dynamic = [
    "version",
]

authors = [
    { name = "Mikkel Schubert", email = "MikkelSch@gmail.com" },
]
license = { file = "LICENSE" }
description = "Bioinformatics pipelines for HTS data"
readme = { file = "README.rst", content-type = "text/x-rst" }

requires-python = ">=3.10"
dependencies = [
    "coloredlogs>=10.0",
    "configargparse>=0.13.0",
    "humanfriendly>=4.7",
    "packaging>=19.0",
    "pysam>=0.10.0",
    "ruamel.yaml>=0.16.0",
    "setproctitle>=1.1.0",
    "typing_extensions>=4.0",
]

keywords = [
    "pipeline",
    "bioinformatics",
    "hts",
    "bam",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/MikkelSchubert/paleomix"
Documentation = "https://paleomix.readthedocs.io"
Repository = "https://github.com/MikkelSchubert/paleomix.git"
Issues = "https://github.com/MikkelSchubert/paleomix/issues"

[project.scripts]
paleomix = "paleomix.__main__:main"

[dependency-groups]
nox = [
    "nox~=2026.7.11",
]

testing = [
    "coverage[toml]~=7.15",
    "pytest~=9.1",
    "pytest-cov~=7.1",
]

linting = [
    "ruff==0.15.22",
]

typing = [
    "zuban==0.9.0",
    { include-group = "testing" },
    { include-group = "nox" },
]

dev = [
    { include-group = "nox" },
    { include-group = "testing" },
    { include-group = "linting" },
    { include-group = "typing" },
]


[tool.hatch.version]
path = "src/paleomix/__init__.py"

[tool.coverage.run]
branch = true

[tool.coverage.report]
skip_covered = true
show_missing = true
precision = 1

exclude_also = [
    # Exclude code-blocks that are only used during type-checking
    "^if TYPE_CHECKING:",
]

[tool.coverage.xml]
output = "cov.xml"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
markers = [
    "slow",
]

[tool.ruff]
target-version = "py310"
output-format = "concise"

exclude = [
    "docs/**",
]

[tool.ruff.lint]
select = [
    "ANN", # flake8-annotations
    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "FA",  # flake8-future-annotations
    # "FBT",  # flake8-boolean-trap (TODO)
    "FLY", # flynt
    "I",   # isort
    "INP", # flake8-no-pep420
    "LOG", # flake8-logging
    "G",   # flake8-logging-format
    # "PTH",  # flake8-use-pathlib (TODO)
    "S",    # flake8-bandit
    "UP",   # pyupgrade
    "PT",   # flake8-pytest-style
    "W",    # warning, pycodestyle
    "N",    # pep8-naming (N)
    "SIM",  # flake8-simplify
    "PIE",  # flake8-pie
    "PLE",  # pylint errors
    "PYI",  # flake8-pyi
    "RUF",  # ruff specific rules
    "FURB", # refurb
    "TID",  # flake8-tidy-imports"
    "PL",   # pylint
    # "TRY",  # tryceratops (TODO
]

ignore = [
    "ANN401",  # flake8-annotations -- any-type (TODO)
    "B904",    # flake8-bugbear -- raise-without-from-inside-except (TODO)
    "S101",    # flake8-bandit -- assert
    "S311",    # flake8-bandit -- suspicious-non-cryptographic-random-usage
    "S603",    # flake8-bandit -- subprocess-without-shell-equals-true
    "S607",    # flake8-bandit -- start-process-with-partial-path
    "UP032",   # pyupgrade -- f-string
    "PLR09",   # pylint -- too-many-*
    "PLR2004", # pylint -- magic-value-comparison
    "PLW2901", # pylint -- redefined-loop-name
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "S101", # assert -- Use of assert detected
    "S108", # hardcoded-temp-file -- Probable insecure usage of temporary file or dir
]

# flake8-annotations - pending rework using typesafe framework
"src/paleomix/pipelines/*/makefile.py" = [
    "ANN",
]
"src/paleomix/pipelines/*/pipeline.py" = [
    "ANN",
]
"src/paleomix/pipelines/*/project.py" = [
    "ANN",
]
"src/paleomix/pipelines/zonkey/**.py" = [
    "ANN",
]

[tool.uv]
reinstall-package = [
    "paleomix",
]

[tool.zuban]
mypy_path = "typings"
strict = true
